Add support for 'font-size' based upon dimension framework
Signed-off-by: Dmitry Baryshkov <dbaryshkov@gmail.com>

--- a/resources/css/fb2.css
+++ b/resources/css/fb2.css
@@ -47,5 +47,10 @@ emphasis {
 }
 
 title {
-	font-family: "Comic Sans MS", "Helvetica", sans-serif
+	font-family: "Comic Sans MS", "Helvetica", sans-serif;
+	font-size: xx-large;
+}
+
+section title {
+	font-size: x-large;
 }
