Convert StyleAttribute to true rules
Signed-off-by: Dmitry Baryshkov <dbaryshkov@gmail.com>

--- a/resources/css/fb2.css
+++ b/resources/css/fb2.css
@@ -49,6 +49,7 @@ emphasis {
 title {
 	font-family: "Comic Sans MS", "Helvetica", sans-serif;
 	font-size: xx-large;
+	font-size: 8pt;
 }
 
 section title {
